--- a/web/src/projects.json
+++ b/web/src/projects.json
@@ -5,6 +5,7 @@
         "description": "Frontend Mentor - Article preview component",
         "demoUrl": "https://sensational-moonbeam-8c77e7.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/article-preview-component",
+        "loading": "eager",
         "icons": [
             {
                 "name": "ReactJS",
@@ -18,6 +19,7 @@
         "description": "Frontend Mentor - Base Apparel coming soon page",
         "demoUrl": "https://lustrous-crumble-1dadc5.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/base-apparel-coming-soon",
+        "loading": "eager",
         "icons": []
     },
     {
@@ -26,6 +28,7 @@
         "description": "Frontend Mentor - FAQ accordion card",
         "demoUrl": "https://starlit-arithmetic-541545.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/faq-accordion-card",
+        "loading": "eager",
         "icons": [
             {
                 "name": "ReactJS",
@@ -39,6 +42,7 @@
         "description": "Frontend Mentor - Four card feature section",
         "demoUrl": "https://jazzy-biscotti-668835.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/four-card-feature-section",
+        "loading": "eager",
         "icons": [
             {
                 "name": "Astro",
@@ -56,6 +60,7 @@
         "description": "Frontend Mentor - Huddle landing page with single introductory section",
         "demoUrl": "https://jade-nasturtium-f05ea7.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/huddle-landing-page-with-single-introductory-section",
+        "loading": "eager",
         "icons": [
             {
                 "name": "TailwindCSS",
@@ -69,6 +74,7 @@
         "description": "Frontend Mentor - Interactive rating component",
         "demoUrl": "https://tranquil-maamoul-b1d98b.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/interactive-rating-component",
+        "loading": "eager",
         "icons": [
             {
                 "name": "ReactJS",
@@ -82,6 +88,7 @@
         "description": "Frontend Mentor - Intro component with sign up form",
         "demoUrl": "https://brilliant-frangollo-b318bc.netlify.app",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/intro-component-with-signup-form",
+        "loading": "lazy",
         "icons": []
     },
     {
@@ -90,6 +97,7 @@
         "description": "Frontend Mentor - NFT preview card component",
         "demoUrl": "https://ubiquitous-chaja-674346.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/nft-preview-card-component",
+        "loading": "lazy",
         "icons": []
     },
     {
@@ -98,6 +106,7 @@
         "description": "Frontend Mentor - Order summary card",
         "demoUrl": "https://velvety-syrniki-3920c2.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/order-summary-component",
+        "loading": "lazy",
         "icons": []
     },
     {
@@ -106,6 +115,7 @@
         "description": "Frontend Mentor - Ping coming soon page",
         "demoUrl": "https://tourmaline-baklava-b3a212.netlify.app/",
         "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/newbie/ping-coming-soon-page",
+        "loading": "lazy",
         "icons": [
             {
                 "name": "ReactJS",
@@ -114,11 +124,44 @@
         ]
     },
     {
-        "title": "A",
-        "image": "/projects/newbie/base-apparel-coming-soon.webp",
-        "description": "Frontend Mentor - ",
-        "demoUrl": "/",
-        "codeUrl": "/",
+        "title": "Clipboard landing page",
+        "image": "/projects/juniors/clipboard-landing-page.webp",
+        "description": "Frontend Mentor - Clipboard landing page",
+        "demoUrl": "https://scintillating-cocada-9d5c5c.netlify.app/",
+        "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/juniors/clipboard-landing-page",
+        "loading": "lazy",
+        "icons": [
+            {
+                "name": "Astro",
+                "url": "/icons/astro.svg"
+            }
+        ]
+    },
+    {
+        "title": "Fylo data storage component",
+        "image": "/projects/juniors/fylo-data-storage-component.webp",
+        "description": "Frontend Mentor - Fylo data storage component",
+        "demoUrl": "https://serene-stardust-03f57d.netlify.app/",
+        "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/juniors/fylo-data-storage-component",
+        "loading": "lazy",
+        "icons": []
+    },
+    {
+        "title": "Huddle landing page with alternating feature blocks",
+        "image": "/projects/juniors/huddle-landing-page-with-alternating-feature-blocks.webp",
+        "description": "Frontend Mentor - Huddle landing page with alternating feature blocks",
+        "demoUrl": "https://classy-kangaroo-3bce46.netlify.app/",
+        "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/juniors/huddle-landing-page-with-alternating-feature-blocks",
+        "loading": "lazy",
+        "icons": []
+    },
+    {
+        "title": "Testimonials grid section",
+        "image": "/projects/juniors/testimonials-grid-section.webp",
+        "description": "Frontend Mentor - Testimonials grid section",
+        "demoUrl": "https://moonlit-pika-39c1bd.netlify.app/",
+        "codeUrl": "https://github.com/jhuancz/retos-frontendmentor/tree/main/juniors/testimonials-grid-section",
+        "loading": "lazy",
         "icons": []
     }
 ]
